--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ body {
     width: 70%;
     margin: 5% auto;
     padding: 2%;
+    border-radius: 4px;
+    box-shadow: 3px 2px 5px hsla(0, 5%, 45%, 85%);
 }
 
 h1 {
@@ -77,7 +79,9 @@ input[type=checkbox]+p {
     color: hsl(0, 0%, 100%);
 }
 
-section+p {
+.reg-form+p {
     text-align: center;
     color: hsl(120, 0%, 95%);
+    /* margin-bottom: 20%; */
+    position: relative;
 }
