--- a/styles.css
+++ b/styles.css
@@ -1,87 +1,142 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    background-color: hsl(202, 100%, 50%);
-}
-
-.reg-form {
-    background-color: hsl(100, 20%, 100%);
-    width: 70%;
-    margin: 5% auto;
-    padding: 2%;
-    border-radius: 4px;
-    box-shadow: 3px 2px 5px hsla(0, 5%, 45%, 85%);
-}
-
-h1 {
-    margin: 2% 0;
-}
-
-h1+p {
-    font-size: large;
-    color: hsl(0, 2%, 60%);
-    padding-bottom: 2%;
-}
-
-form {
-    padding-top: 3%;
-}
-
-input[type=text] {
-    padding: 2%;
-    background-color: hsl(120, 0%, 95%);
-    border: none;
-    border-radius: 2px;
-    width: 40%;
-    margin-right: 9%;
-    margin-bottom: 2%;
-}
-
-input[type=email] {
-    background-color: hsl(120, 0%, 95%);
-    width: 100%;
-    border: none;
-    border-radius: 6px;
-    padding: 2%;
-    margin-bottom: 2%;
-}
-
-input[type=password] {
-    width: 100%;
-    background-color: hsl(120, 0%, 95%);
-    padding: 2%;
-    border: none;
-    margin-bottom: 2%;
-}
-
-input[type=checkbox] {
-    background-color: rgb(143, 142, 142);
-    border: 2px inset hsl(0, 2%, 60%);
-    font-size: 50%;
-    margin-bottom: 2%;
-}
-
-input[type=checkbox]+p {
-    color: hsl(0, 5%, 45%);
-    display: inline;
-}
-
-.button {
-    width: 15%;
-    padding: 1%;
-    background-color: hsl(202, 100%, 50%);
-    border: 0 inset;
-    border-radius: 3px;
-    color: hsl(0, 0%, 100%);
-}
-
-.reg-form+p {
-    text-align: center;
-    color: hsl(120, 0%, 95%);
-    /* margin-bottom: 20%; */
-    position: relative;
-}
+            @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Libre+Caslon+Display&display=swap');
+            * {
+                box-sizing: border-box;
+                margin: 0;
+                padding: 0;
+                font-family: 'EB Garamond', 'Libre Caslon Display', serif;
+            }
+            
+            html,
+            body {
+                height: 100%;
+            }
+            
+            body {
+                display: grid;
+                place-items: center;
+                background-color: hsl(250, 20%, 40%);
+            }
+            
+            .reg-form {
+                background: hsl(250, 20%, 40%);
+                max-width: 50%;
+                height: auto;
+                margin: 5% auto;
+                padding: 2% 4%;
+                border-radius: 4px;
+                box-shadow: -15px -11px 11px 0px hsla(0, 0%, 0%, 30%), 17px 27px 61px 0 hsla(240, 90%, 90%, 10%);
+                /* box-shadow: 20px 50px #00d2c6, -30px -30px 60px #00ffff */
+            }
+            
+            .title {
+                margin: 2% 0;
+                text-align: center;
+                color: lightblue;
+                font-size: xx-large;
+                font-weight: 600;
+            }
+            
+            .info {
+                text-align: center;
+                color: hsl(0, 80%, 80%);
+                text-transform: capitalize;
+                font-size: larger;
+                padding-bottom: 2%;
+            }
+            /* form {
+                padding-top: 3%;
+            } */
+            
+            .user_field {
+                /* height: 100%; */
+                width: 100%;
+                display: flex;
+                /* justify-content: space-around; */
+            }
+            
+            .user_field input,
+            .email_field input,
+            .pwd_field input {
+                padding: 1.9% 30px 1.9%;
+                background-color: hsl(250, 20%, 40%);
+                /* background-color: hsl(120, 0%, 95%); */
+                color: hsl(120, 0%, 95%);
+                font-size: 1.3em;
+                border: none;
+                outline: none;
+                border-radius: 50px;
+                width: 100%;
+                margin: 2% 1% 2% 0;
+                box-shadow: inset 2px 2px 5px hsl(0, 5%, 5%, 60%), inset -2px -9px 7px hsla(250, 20%, 45%);
+                /* margin-bottom: 2%; */
+            }
+            
+            .user_field input::placeholder,
+            .email_field input::placeholder,
+            .pwd_field input::placeholder {
+                font-size: 1em;
+                padding-left: 2px;
+                color: hsl(120, 0%, 95%);
+            }
+            
+            .user_field input:focus::placeholder,
+            .email_field input:focus::placeholder,
+            .pwd_field input:focus::placeholder {
+                color: hsl(0, 70%, 80%);
+                font-weight: 500;
+            }
+            
+            .user_field input:valid,
+            .email_field input:valid,
+            .pwd_field input:valid {
+                background-color: hsl(250, 33%, 56%);
+                color: hsl(330, 22%, 96%);
+                box-shadow: inset -5px -2px 10px hsl(0, 5%, 5%, 60%), inset 5px 8px 7px hsla(250, 0%, 75%);
+            }
+            
+            .check_agreement {
+                color: hsl(0, 0%, 100%);
+                display: inline-block;
+                font-size: 1.1em;
+                margin-bottom: 20px;
+            }
+            
+            .check_agreement a {
+                text-decoration: none;
+                color: hsl(0, 80%, 80%);
+                font-weight: 500;
+            }
+            
+            .check_agreement a:hover {
+                text-decoration: underline;
+                color: hsl(202, 100%, 50%);
+            }
+            
+            .button {
+                width: 100%;
+                height: 50px;
+                text-align: center;
+                margin: 2% auto;
+                cursor: pointer;
+                font-size: 1.3rem;
+                background-color: hsl(250, 33%, 56%);
+                border: none;
+                outline: none;
+                border-radius: 25px;
+                color: hsl(0, 0%, 100%);
+                box-shadow: -5px -2px 10px hsla(0, 15%, 5%, 20%), 5px 5px 7px hsla(250, 0%, 5%, 60%);
+            }
+            
+            .button:focus {
+                color: hsl(180, 90%, 48%);
+                font-weight: 700;
+                box-shadow: inset -5px -2px 10px hsla(0, 15%, 5%, 20%), inset 5px 5px 7px hsla(250, 0%, 5%, 90%);
+            }
+            
+            .login {
+                text-align: center;
+                font-size: 1.1em;
+                color: hsl(120, 0%, 95%);
+                display: inline-block;
+                margin: 0;
+            }
