fixed the button margin

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body {
     color: hsl(0, 0%, 100%);
     display: inline-block;
     font-size: 1.1em;
-    margin-bottom: 20px;
+    margin-bottom: 1 0px;
 }
 
 .check_agreement a {
