Fixed media queries

--- a/css/login_style.css
+++ b/css/login_style.css
@@ -182,3 +182,43 @@
     .btn:hover {
         background-position: right;
     }
+    
+    @media only screen and (max-width:1050px) {
+        .container {
+            gap: 1rem;
+        }
+    }
+    
+    @media only screen and (max-width:1000px) {
+        form {
+            width: 300px;
+        }
+        form h2 {
+            font-size: 2.8rem;
+            margin: 10px 0;
+        }
+        .img img {
+            width: 400px;
+        }
+    }
+    
+    @media only screen and (max-width: 800px) {
+        .img img {
+            width: 300px;
+        }
+        form {
+            width: 300px;
+        }
+    }
+    
+    @media only screen and (max-width: 680px) {
+        .img img {
+            display: none;
+        }
+        .login-container {
+            justify-content: center;
+        }
+        .container {
+            grid-template-columns: 1fr;
+        }
+    }
