--- a/css/signup_style.css
+++ b/css/signup_style.css
@@ -8,11 +8,13 @@
 
 html,
 body {
-    height: 100%;
+    height: 50%;
+    margin-top: 10%;
 }
 
 body {
     display: grid;
+    grid-template-columns: 1fr;
     place-items: center;
     background-color: hsl(250, 20%, 40%);
 }
@@ -21,11 +23,11 @@ body {
     background: hsl(250, 20%, 40%);
     width: 70%;
     height: auto;
-    margin: 5% auto;
+    margin: 0px 0px 25px 0px;
     padding: 2% 4%;
     border-radius: 4px;
     box-shadow: -15px -11px 11px 0px hsla(0, 0%, 0%, 30%), 17px 27px 61px 0 hsla(240, 90%, 90%, 10%);
-    transition: .4s;
+    transition: .9s;
 }
 
 .title {
@@ -45,10 +47,8 @@ body {
 }
 
 .user_field {
-    /* height: 100%; */
     width: 100%;
     display: flex;
-    /* justify-content: space-around; */
 }
 
 .user_field input,
@@ -56,7 +56,6 @@ body {
 .pwd_field input {
     padding: 1.9% 30px 1.9%;
     background-color: hsl(250, 20%, 40%);
-    /* background-color: hsl(120, 0%, 95%); */
     color: hsl(120, 0%, 95%);
     font-size: 1.3em;
     border: none;
@@ -65,7 +64,6 @@ body {
     width: 100%;
     margin: 2% 1% 2% 0;
     box-shadow: inset 2px 2px 5px hsl(0, 5%, 5%, 60%), inset -2px -9px 7px hsla(250, 20%, 45%);
-    /* margin-bottom: 2%; */
 }
 
 .user_field input::placeholder,
@@ -73,7 +71,7 @@ body {
 .pwd_field input::placeholder {
     font-size: 1em;
     padding-left: 2px;
-    color: hsl(120, 0%, 95%);
+    color: rgba(242, 242, 242, 0.281);
 }
 
 .user_field input:focus::placeholder,
@@ -149,15 +147,13 @@ body {
     color: rgb(20, 196, 240);
 }
 
-@media screen and (max-width:550px) {
+@media only screen and (max-width:550px) {
     section .reg-form {
-        height: 100%;
-    }
-    form {
-        height: 100%;
+        margin: 5% 0px 0px 0px;
+        width: 330.7812px;
     }
     .title {
-        font-size: 1rem;
+        font-size: 1.4rem;
     }
     .info {
         font-size: 0.8rem;
